[project]
name = "book-nav"
version = "0.1.0"
description = ""
authors = [
    {name = "bobr-ik",email = "aavramenko804@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic (<2.12)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
